--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,12 +1,11 @@
 .profile__edit-button {
-  margin: 26px 0 0 18px;
+  margin: 15px 0 0 18px;
   width: 24px;
   height: 24px;
   background-color: unset;
-  border: none;
+  border: 1px solid #fff;
   background-image: url(../../../images/edit-button.svg);
   transition: .2s;
-  align-self: flex-start;
 }
 
 .profile__edit-button:hover {
