--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,3 +5,10 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 767px) {
+  .profile {
+    max-width: 320px;
+    flex-direction: column;
+  }
+}
