--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,3 +5,10 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+@media screen and (max-width: 767px) {
+  .header__logo {
+    width: 103px;
+    height: 24px;
+  }
+}
