--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,17 @@
   border-bottom: 1px solid rgb(84, 84, 84, .7);
   padding: 45px 0 0 0;
 }
+
+@media screen and (max-width: 1023px) {
+  .header {
+    max-width: 580px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    max-width: 282px;
+    padding-top: 28px;
+    min-height: 56px;
+  }
+}
