--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,14 +1,22 @@
 .profile__add-button {
   margin-left: auto;
+  padding: 0;
   width: 150px;
   height: 50px;
-  background-color: unset;
   border: none;
-  background-image: url(../../../images/add-button.svg);
+  background: url(../../../images/add-button.svg) no-repeat center / cover;
   transition: .2s;
 }
 
 .profile__add-button:hover {
   opacity: .6;
   cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .profile__add-button {
+    background-image: url(../../../images/add-button-mobile.svg);
+    margin: 0 auto;
+    width: 282px;
+  }
 }
