--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -5,4 +5,27 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  max-width: 440px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1023px) {
+  .profile__subtitle {
+    max-width: 220px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .profile__subtitle {
+    margin: 0 auto;
+    max-width: 200px;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    padding: 14px 0 36px 0;
+  }
 }
