--- a/blocks/profile/__title-cover/profile__title-cover.css
+++ b/blocks/profile/__title-cover/profile__title-cover.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 767px) {
+  .profile__title-cover {
+    justify-content: center;
+  }
+}
