--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+@media screen and (max-width: 1023px) {
+  .profile {
+    max-width: 580px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .profile {
     max-width: 320px;
