--- a/blocks/card/__title-cover/card__title-cover.css
+++ b/blocks/card/__title-cover/card__title-cover.css
@@ -1,9 +1,8 @@
 .card__title-cover {
+  padding: 25px 20px;
   background-color: #fff;
-  min-height: 79px;
   box-sizing: border-box;
   margin: 0;
-  padding: 0 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
