--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,10 +2,6 @@
   max-width: 880px;
   padding: 50px 0 0 0;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 282px);
-  gap: 17px;
-  justify-content: center;
 }
 
 @media screen and (max-width: 1023px) {
@@ -16,6 +12,6 @@
 
 @media screen and (max-width: 767px) {
   .elements {
-    grid-template-columns: 282px;
+    padding-top: 36px;
   }
 }
