--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,8 @@
 .header {
   margin: 0 auto;
   max-width: 880px;
-  min-height: 74px;
   border-bottom: 1px solid rgb(84, 84, 84, .7);
-  padding: 45px 0 0 0;
+  padding: 45px 0 41px 0;
 }
 
 @media screen and (max-width: 1023px) {
@@ -14,8 +13,7 @@
 
 @media screen and (max-width: 767px) {
   .header {
-    max-width: 282px;
-    padding-top: 28px;
-    min-height: 56px;
+    max-width: 320px;
+    padding: 28px 0 31px 27px;
   }
 }
