--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -5,7 +5,7 @@
   width: 32px;
   height: 32px;
   border: none;
-  background: url(../../../images/close-icon.png) no-repeat center / cover;
+  background: url(../../../images/close-icon.svg) no-repeat center / cover;
   transition: .2s;
 }
 
