--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,8 +3,9 @@
   padding: 0;
   width: 150px;
   height: 50px;
-  border: none;
-  background: url(../../../images/add-button.svg) no-repeat center / cover;
+  border: 2px solid white;
+  background: url(../../../images/add-button.svg) no-repeat center;
+  background-size: 22px;
   transition: .2s;
 }
 
@@ -15,7 +16,7 @@
 
 @media screen and (max-width: 767px) {
   .profile__add-button {
-    background-image: url(../../../images/add-button-mobile.svg);
+    background-size: 16px;
     margin: 0 auto;
     width: 282px;
   }
