--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,5 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  background-image: url(../../../images/avatar.jpg);
-  background-size: cover;
+  object-fit: cover;
 }
