--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,8 +5,11 @@
   left: 0;
   min-width: 100%;
   min-height: 100%;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
   justify-content: center;
   align-items: center;
   color: #000;
+  transition: .3s;
 }
