--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,6 @@
 .popup__input {
   box-sizing: border-box;
-  padding: 13px 10px;
+  padding: 8px 5px;
   display: block;
   width: 100%;
   min-height: 35px;
@@ -9,6 +9,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+  outline-offset: 3px;
 }
 
 .popup__input:not(:last-of-type) {
