--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like/card__like.css);
 @import url(../blocks/card/__like/_active/card__like_active.css);
+@import url(../blocks/card/__likes-counter/card__likes-counter.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
@@ -39,3 +40,5 @@
 @import url(../blocks/popup/__figure/popup__figure.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/profile/__avatar-edit-btn/profile__avatar-edit-btn.css);
+@import url(../blocks/profile/__avatar-image/profile__avatar-image.css);
