--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);margin:0 auto;max-width:880px;padding:45px 0 41px}@media screen and (max-width:1023px){.header{max-width:580px}}@media screen and (max-width:767px){.header{max-width:320px;padding:28px 0 31px 27px}}
 .header__logo{background-image:url(03b78ada3425e9132ff3.svg);background-repeat:no-repeat;background-size:contain;height:33px;width:142px}@media screen and (max-width:767px){.header__logo{height:24px;width:103px}}
 .profile{align-items:center;display:flex;margin:0 auto;max-width:880px;padding:40px 0 0}@media screen and (max-width:1023px){.profile{max-width:580px}}@media screen and (max-width:767px){.profile{flex-direction:column;max-width:320px}}
-.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
+.profile__avatar{border-radius:50%;height:120px;position:relative;width:120px}
 .profile__info{padding-left:30px}@media screen and (max-width:767px){.profile__info{margin:0 auto;min-width:282px;padding:26px 0 0}}
 .profile__title-cover{display:flex;justify-content:flex-start}@media screen and (max-width:767px){.profile__title-cover{justify-content:center}}
 .profile__title{font-size:42px;font-style:normal;font-weight:500;line-height:48px;margin:0;max-width:440px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:1023px){.profile__title{font-size:30px;line-height:36px;max-width:220px}}@media screen and (max-width:767px){.profile__title{font-size:27px;line-height:33px;max-width:200px}}
@@ -17,10 +17,11 @@
 .card{border-radius:10px;list-style-type:none;margin:0;overflow:hidden;padding:0;position:relative}
 .card__delete-btn{background:url(823b0cf1b0b7e9cb7cad.svg) no-repeat 50%/cover;border:none;height:19px;margin:0;padding:0;position:absolute;right:20px;top:20px;transition:.2s;width:18px}.card__delete-btn:hover{cursor:pointer;opacity:.6}
 .card__image{display:block;height:282px;-o-object-fit:cover;object-fit:cover;-o-object-position:top;object-position:top;width:282px}.card__image:hover{cursor:pointer}
-.card__title-cover{align-items:center;background-color:#fff;box-sizing:border-box;display:flex;justify-content:space-between;margin:0;padding:25px 20px}
+.card__title-cover{align-items:center;background-color:#fff;box-sizing:border-box;display:flex;justify-content:space-between;margin:0;padding:20px}
 .card__title{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:0;max-width:200px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
 .card__like{background:url(87ed371465c7a6a1cd01.svg) no-repeat 50%/cover;border:none;height:19px;margin:0;padding:0;transition:.2s;width:22px}.card__like:hover{cursor:pointer;opacity:.5}
 .card__like_active{background:url(fe17a515669479b1e649.svg) no-repeat 50%/cover}
+.card__likes-counter{color:#000;font-size:13px;font-weight:400;line-height:16px;margin:0;padding:2px 0 0;text-align:center}
 .footer{margin:0 auto;max-width:880px;padding:66px 0 60px}@media screen and (max-width:1023px){.footer{max-width:580px}}@media screen and (max-width:767px){.footer{max-width:282px;padding-bottom:36px;padding-top:48px}}
 .footer__copyright{color:#545454;font-size:18px;font-weight:400;line-height:22px;margin:0;padding:0}@media screen and (max-width:767px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);color:#000;display:flex;justify-content:center;left:0;min-height:100%;min-width:100%;opacity:0;position:fixed;top:0;transition:.3s;visibility:hidden}
@@ -39,4 +40,6 @@
 .popup__figure{margin:0}
 .popup__image{display:block;max-height:75vh;max-width:75vw;min-width:282px}
 .popup__caption{color:#fff;font-size:12px;font-weight:400;line-height:15px;padding:10px 0 0}
+.profile__avatar-edit-btn{background-color:#000;background-color:transparent;background-size:26px;border:none;border-radius:50%;cursor:pointer;height:100%;left:0;padding:0;position:absolute;top:0;transition:.4s;width:100%}.profile__avatar-edit-btn:hover{background:url(a086f758840ae814ecde.svg) no-repeat 50%;background-color:rgba(0,0,0,.8);background-size:26px;cursor:pointer}
+.profile__avatar-image{border-radius:50%;height:100%;left:0;-o-object-fit:cover;object-fit:cover;position:absolute;top:0;width:100%}
 
