--- a/main.css
+++ b/main.css
@@ -40,6 +40,6 @@
 .popup__figure{margin:0}
 .popup__image{display:block;max-height:75vh;max-width:75vw;min-width:282px}
 .popup__caption{color:#fff;font-size:12px;font-weight:400;line-height:15px;padding:10px 0 0}
-.profile__avatar-edit-btn{background-color:#000;background-color:transparent;background-size:26px;border:none;border-radius:50%;cursor:pointer;height:100%;left:0;padding:0;position:absolute;top:0;transition:.4s;width:100%}.profile__avatar-edit-btn:hover{background:url(a086f758840ae814ecde.svg) no-repeat 50%;background-color:rgba(0,0,0,.8);background-size:26px;cursor:pointer}
+.profile__avatar-edit-btn{background-color:transparent;background-size:26px;border:none;border-radius:50%;cursor:pointer;height:100%;left:0;padding:0;position:absolute;top:0;transition:.4s;width:100%}.profile__avatar-edit-btn:hover{background:url(a086f758840ae814ecde.svg) no-repeat 50%;background-color:rgba(0,0,0,.8);background-size:26px;cursor:pointer}
 .profile__avatar-image{border-radius:50%;height:100%;left:0;-o-object-fit:cover;object-fit:cover;position:absolute;top:0;width:100%}
 
